[project]
name = "nekt-mcp-server"
version = "0.1.0"
description = "Nekt MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.2.10",
    "fastparquet>=2024.11.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "uvicorn>=0.34.2",
]
